--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
                 <h3 class="float-md-left mb-0">Hotelify</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Hotels</a>
+                    <a class="nav-link" href="/hotels">Hotels</a>
                     <% if(!currentUser) { %>
                     <a class="nav-link" href="/login">Login</a>
                     <a class="nav-link" href="/register">Register</a>
@@ -31,7 +31,7 @@
             <h1>Hotelify</h1>
             <p class="lead"> Welcome to Hotelify! <br> Jump right in and explore our hotels. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+            <a href="/hotels" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 Hotels</a>
         </main>
 
