--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,10 +16,10 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/campgrounds">Hotels</a>
+            <a class="nav-link" href="/hotels">Hotels</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/campgrounds/new">New Hotel</a>
+            <a class="nav-link" href="/hotels/new">New Hotel</a>
           </li>
         </ul>
       </div>
